[package]
name = "cpm-test-harness"
version = "0.1.0"
authors = ["David Tyler <davet.code@gmail.com>"]
edition = "2018"

[dependencies]
postgres = { version = "0.19.1", features = ["with-uuid-0_8"] }
rocket = "0.4.7"
rocket-multipart-form-data = "0.9.6"
serde = { version = "1.0.125", features = ["derive"] }
serde_json = "1.0.64"
uuid = { version = "0.8.2", features = ["v4"] }

[dependencies.rocket_contrib]
version = "0.4.7"
default-features = false
features = ["json"]